[package]
name = "rquickjs_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
argh = "0.1.14"
chrono = "0.4.43"
reqwest = "0.13.2"
rquickjs = { version = "0.11.0", features = ["futures", "macro", "loader", "dyn-load", "rust-alloc"] }
rustyline = "17.0.2"
tokio = { version = "1.48.0", features = ["full"] }
